Add button to clear and redraw the screen
This commit represents the remaining steps for the most basic version of
the project. A button is added to the top of the page which when clicked
prompts the user for a numerical input, then the draw screen is cleared
(by calling .replaceChildren()) and redrawn according to the number of
squares (defined by the user input).

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
 }
 
 .container {
+  margin: 40px auto;
+  text-align: center;
+}
+
+.drawScreen {
   width: 960px;
   height: 960px;
   margin: 40px auto;
@@ -18,9 +23,4 @@
 
 .square {
   border: 1px solid black;
-  flex: 0 0 auto;
-}
-
-.square:hover {
-  background-color: lightgrey;
 }
