--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
   --primary-grey: #7f7f7f;
   --secondary-grey: #f2f2f2;
   --gold: #ead196;
-  --silver: #eeeeee;
+  --button-regular: #eeeeee;
+  --button-hover: #d6d6d6;
+  --button-active: #bebebe;
 }
 
 *,
@@ -15,20 +17,65 @@
   box-sizing: border-box;
 }
 
-/* header */
+html {
+  /* footer support */
+  position: relative;
+  min-height: 100%;
+}
 
-/* body */
-
-.body {
+body {
+  background-color: var(--secondary-grey);
   font-family: "Audiowide", sans-serif;
   font-weight: 400;
   font-style: normal;
+  line-height: 1.2;
+  /* footer support */
+  margin-bottom: 100px;
 }
 
-.main {
+button {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+
+  background-color: var(--button-regular);
+}
+
+button:hover {
+  background-color: var(--button-hover);
+}
+
+button:active {
+  background-color: var(--button-active);
+}
+
+/* header */
+
+.header {
+  background-color: var(--secondary-red);
+  color: var(--gold);
+  font-size: 2em;
+}
+
+.header div {
+  /* max-width: 1000px; */
+  margin: 0 auto;
+  padding: 20px;
+
+  display: flex;
+  justify-content: center;
+}
+
+/* body */
+
+.content {
   padding: 40px;
   overflow-x: auto;
-  min-width: 100vw;
 }
 
 .container-wrapper {
@@ -45,7 +92,7 @@
 
   background-color: var(--primary-red);
   border-radius: 50px;
-  box-shadow: 10px 5px 5px var(--secondary-grey);
+  box-shadow: 10px 5px 5px var(--primary-grey);
 
   display: flex;
   justify-content: flex-start;
@@ -60,19 +107,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 20px;
-}
-
-.button {
-  font-family: "Audiowide", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1.5em;
-
-  padding: 10px;
-  border: none;
-  border-radius: 10px;
-
-  background-color: var(--silver);
 }
 
 .tool-button.active {
@@ -96,4 +130,36 @@
 
 .show-grid {
   border: 1px solid black;
+}
+
+/* footer */
+
+.footer {
+  background-color: var(--secondary-red);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  padding: 10px;
+  width: 100%;
+  height: 100px;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.copyright {
+  font-size: 1.2em;
+}
+
+a {
+  color: var(--gold);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
