--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,35 @@ button:active {
   gap: 20px;
 }
 
+.input-container {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+
+  background-color: var(--button-regular);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+label {
+}
+
+input {
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.8em;
+  text-align: center;
+}
+
 .tool-button.active {
   background-color: var(--gold);
 }
