Add color selection feature
This commit updates the interface so that the user can now use a
color-picker input to change the current color of the brush. The browser
is pretty much in control of the UI behavior for this, but I did style
the input and label to fit in with the rest of the site.

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,8 @@ button:active {
   gap: 20px;
 }
 
-.input-container {
+.input-container,
+.color-container {
   border: none;
   border-radius: 10px;
   padding: 10px;
@@ -127,10 +128,7 @@ button:active {
   gap: 5px;
 }
 
-label {
-}
-
-input {
+.input-container input {
   font-family: "Audiowide", sans-serif;
   font-weight: 400;
   font-style: normal;
